Avoid usage of deprecated Boolean/Double constructors